added stylesheet and write some html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheikh Zayed's history</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +18,7 @@
         </header>
         <div id="img-div">
             <img id="image" src="SheikhZayed.jpg" alt="">
-            <figcaption id="img-caption">Portrait of Sheikh Zayed</figcaption>
+            <figcaption id="img-caption">Portrait of Sheikh Zayed - Father of the Nation (1918 - 2004)</figcaption>
         </div>
         <section id="tribute-info">
             <h2>Here's a time line of Sheikh Zayed's life:</h2>
@@ -32,12 +33,20 @@
                     first strong relationship</li>
                 <li><span>1971</span> - He founded the United Arab Emirates (UAE) and became the country's first
                     president.</li>
+                <li><span>1981</span> - Gulf Cooperation Council was founded after many lengthy discussions between
+                    Sheikh Zayed and other Gulf countries</li>
+                <li><span>1995</span> - He was awarded Golden Panda award from the World Wide Fund for Nature</li>
+                <li><span>2004</span> - passes away at the age of 86</li>
+                <li><span>2005</span> - he was honoured with ‘Champion of the
+                    Earth’ by the United Nations Environment Programme</li>
             </ul>
+            <blockquote>
+                <p>"Who does not know his past cannot make his best of present and future, for it its from the past that
+                    we learn"</p>
+                <p>--Sheikh Zayed bin Sultan Al Nahyan</p>
+            </blockquote>
         </section>
-        <blockquote>
-            <p>Who does not know his past cannot make his best of present and future, for it its from the past that we
-                learn</p>
-        </blockquote>
+
         <footer>
             <p>If you have time, you should read more about this incredible human being on his <a
                     href="https://en.wikipedia.org/wiki/Zayed_bin_Sultan_Al_Nahyan" target="_blank"
