--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sheikh Zayed's history</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" defer></script>
 </head>
 
 <body>
@@ -16,10 +17,10 @@
             <h2>زَايِد بِن سُلْطَان آل نَهْيَان</h2>
             <p>The man who built a nation</p>
         </header>
-        <div id="img-div">
+        <figure id="img-div">
             <img id="image" src="SheikhZayed.jpg" alt="">
             <figcaption id="img-caption">Portrait of Sheikh Zayed - Father of the Nation (1918 - 2004)</figcaption>
-        </div>
+        </figure>
         <section id="tribute-info">
             <h2>Here's a time line of Sheikh Zayed's life:</h2>
             <ul>
@@ -41,19 +42,19 @@
                     Earth’ by the United Nations Environment Programme</li>
             </ul>
             <blockquote>
-                <p>"Who does not know his past cannot make his best of present and future, for it its from the past that
-                    we learn"</p>
+                <h3>"Who does not know his past cannot make his best of present and future, for it its from the past
+                    that
+                    we learn"</h3>
                 <p>--Sheikh Zayed bin Sultan Al Nahyan</p>
             </blockquote>
         </section>
 
         <footer>
-            <p>If you have time, you should read more about this incredible human being on his <a
-                    href="https://en.wikipedia.org/wiki/Zayed_bin_Sultan_Al_Nahyan" target="_blank"
-                    id="tribute-link">Wikipedia entry</a>.</p>
+            <p>If you have time, you should read more about this incredible human being on his <a id="tribute-link"
+                    href="https://en.wikipedia.org/wiki/Zayed_bin_Sultan_Al_Nahyan" target="_blank">Wikipedia entry</a>.
+            </p>
         </footer>
     </main>
-
 </body>
 
 </html>
